Fix spacing

--- a/stylesheets/blog.css
+++ b/stylesheets/blog.css
@@ -1,6 +1,6 @@
 .resize {
-  height: 5em;
-  width: 15em;
+  height: 8em;
+  width: 24em;
 }
 
 .center {
